zerocopy-derive/tests/ui-msrv/late_compile_pass.stderr
error[E0277]: the trait bound `&'static str: FromBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:18:10
   |
18 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `&'static str`
   |
note: required by a bound in `ImplementsFromBytes`
  --> tests/ui-msrv/late_compile_pass.rs:18:10
   |
18 | #[derive(FromBytes)]
   |          ^^^^^^^^^ required by this bound in `ImplementsFromBytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotAsBytes: AsBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:30:10
   |
30 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `AsBytes` is not implemented for `NotAsBytes`
   |
note: required by a bound in `ImplementsAsBytes`
  --> tests/ui-msrv/late_compile_pass.rs:30:10
   |
30 | #[derive(AsBytes)]
   |          ^^^^^^^ required by this bound in `ImplementsAsBytes`
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:40:10
   |
40 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `u16`
   |
   = help: the following implementations were found:
             <i8 as Unaligned>
             <u8 as Unaligned>
note: required by a bound in `<Unaligned1 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
  --> tests/ui-msrv/late_compile_pass.rs:40:10
   |
40 | #[derive(Unaligned)]
   |          ^^^^^^^^^ required by this bound in `<Unaligned1 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:48:10
   |
48 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `u16`
   |
   = help: the following implementations were found:
             <i8 as Unaligned>
             <u8 as Unaligned>
note: required by a bound in `<Unaligned2 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
  --> tests/ui-msrv/late_compile_pass.rs:48:10
   |
48 | #[derive(Unaligned)]
   |          ^^^^^^^^^ required by this bound in `<Unaligned2 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:55:10
   |
55 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `u16`
   |
   = help: the following implementations were found:
             <i8 as Unaligned>
             <u8 as Unaligned>
note: required by a bound in `<Unaligned3 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
  --> tests/ui-msrv/late_compile_pass.rs:55:10
   |
55 | #[derive(Unaligned)]
   |          ^^^^^^^^^ required by this bound in `<Unaligned3 as Unaligned>::only_derive_is_allowed_to_implement_this_trait::ImplementsUnaligned`
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
